Sigil v0.3.3 2011.01.06.
    - added a .desktop file for the make install target (courtesy of Richard Gibert)
    - this time *really* worked around a Tidy bug that added blank lines to the start of <pre> 
    and <style> elements (issue #655)
    - updated ZipArchive from 4.0.1 to 4.1.0
    - fixed a regression crash bug with loading extremely rare HTML content documents that have
    an internal DTD subset
    - added a workaround for a crash bug caused by invalid epubs that use obfuscated fonts but 
    with incorrect UUID URN key syntax (issue #709)
    - integrated the FlightCrew epub validation library; a new toolbar icon triggers epub 
    validation and displays the results (issue #28)
    - fixed a rare input truncation problem when the input file contains a unicode nbsp and also
    specifies standalone="yes" in the XML declaration (issue #677)

Sigil v0.3.2 2010.11.24.
    - added a new toolbar button for turning Tidy cleaning on/off; this option is also available
    from the Tools menu (issue #553)
    - added support for TrueType Collection fonts with extension TTC
    - InDesign (as of CS5) refuses to list the fonts it embeds in the OPF manifest of the epub 
    files it exports, even though the epub standard demands it. This causes Sigil to not pick up
    these fonts when opening such epub files. A workaround has been added that will detect such
    problematic epubs and then load the font files.
    - fixed a rare crash issue when loading epub files

Sigil v0.3.1 2010.11.07
    - added a new "Font Obfuscation" context menu for font files in the Book Browser; the user can
    now select (or de-select) the use of Adobe's or the IDPF's font obfuscation methods; this also
    resolves the problem where Sigil refused to open epub files that use such obfuscated fonts with  
    the message that the epub has DRM
    - fixed a validation issue caused by Sigil using "application/x-font-opentype" as the OPF