@@ -82,6 +82,7 @@
     <addaction name="actionUserManual"/>
     <addaction name="actionFAQ"/>
     <addaction name="separator"/>
+    <addaction name="actionDonate"/>
     <addaction name="actionReportAnIssue"/>
     <addaction name="actionSigilDevBlog"/>
     <addaction name="actionAbout"/>
@@ -218,6 +219,18 @@
    </attribute>
    <addaction name="actionSplitChapter"/>
    <addaction name="actionInsertImage"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarDonate">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionDonate"/>
   </widget>
   <widget class="QToolBar" name="toolBarHeadings">
    <property name="windowTitle">
@@ -1043,6 +1056,21 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+V</string>
+   </property>
+  </action>
+  <action name="actionDonate">
+   <property name="icon">
+    <iconset resource="../Resource_Files/main/main.qrc">
+     <normaloff>:/main/emblem-favorite_22px.png</normaloff>:/main/emblem-favorite_22px.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Donate...</string>
+   </property>
+   <property name="toolTip">
+    <string>&lt;p style=&quot;padding-top: 0.5em;&quot; &gt;&lt;b&gt;Donate to Sigil's development&lt;/b&gt;&lt;/p&gt;
+
+&lt;p style=&quot;margin-left: 0.5em;&quot;&gt;Your donations keep the project going!&lt;/p&gt;
+</string>
    </property>
   </action>
  </widget>
