@@ -1,4 +1,5 @@
 Sigil v0.3.3 2011.01.06.
+    - added a small "Donate" button to the toolbar and a related entry in the Help menu 
     - added a .desktop file for the make install target (courtesy of Richard Gibert)
     - this time *really* worked around a Tidy bug that added blank lines to the start of <pre> 
     and <style> elements (issue #655)
